# pore_designer

./: .gitignore  README.md  pyproject.toml
data/2XQS_monomer/designer_input/: 2XQS.unified_10_monomer_000002.symmetric.jsonl
data/blosum/: blosum62.csv
designer/: alphafold.py  config.py  constants.py  design.py  file_utils.py  paths.py  pdb.py  plotting.py  proteinmpnn.py  sequence.py  utils.py
docker/: Dockerfile  build_docker_image.sh  build_docker_image_full.sh  publish_docker_image.sh
scripts/: analyze_af2_noise.py  design_pore.py  fix_alphafold.sh  install_proteinmpnn.sh
scripts/hydrophilic_redesign/: make_af2_input_from_top_scores.py  pull_top_designs_by_plddt.py  setup_proteinmpnn_inputs.py  unzip_all_af2.py
scripts/utils/: analyze_af2_noise.py  mpnn_to_seqlogo.py  plot_single_chain_seqlogo.py  report_pdb_values.py
tests/: clean_tests.py
tests/metric_test/inputs/: known_pores.csv
tests/metric_test/output/: config.json
tests/metric_test/output/input/: AF2_design_input.csv  AF2_oligomer_input.csv  input.csv
tests/mutation_test/inputs/: 4JPP_640_11mer.json
tests/mutation_test/output/: config.json
tests/negative_test/output/: config.json
tests/positive_test/output/: config.json
