[tool.poetry]
name = "pore_designer"
version = "0.1.0"
description = "Design alpha-helical pores"
authors = ["Aron Broom <broomsday@gmail.com>"]
packages = [{include = "designer"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
tqdm = "^4.62.3"
pandas = "^1.4.1"
biotite = "^0.36.1"
jsonlines = "^4.0.0"
matplotlib = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
